--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-MONGO_URI=mongodb://localhost:27017/mean-db
+MONGO_URI=mongodb+srv://mean_user:Y0nPKr4mS5aZMy6Q@cluster0.nokivt5.mongodb.net/mean-db
 JWT_SEED=fcvghbjoi87654rty65rfvgbhnbvcfgh
+
+DB USER=mean_user
+DB PASSWORD=Y0nPKr4mS5aZMy6Q
