--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
         "DELETE"
       ],
       "headers": {
-        "Access-Control-Allow-Origin": "https://login-front-angular.vercel.app",
+        "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
         "Access-Control-Allow-Headers": "Content-Type, Authorization"
       }
